# datatrain

./: disclaimer.md  pyproject.toml  readme.md
datatrain/core/: config.py
datatrain/core/cli/: client.py
datatrain/core/codebase/: outliers.py  z-score.py
datatrain/workload/: cleared_train.csv  task1.csv  task2.csv
